syntax = "proto3";

option csharp_namespace = "Distance.Service.Protos";

package DistanceService;

service DistanceService {
  rpc GetDistanceInfoList (GetDistanceInfoListRequest) returns (GetDistanceInfoListReply);
  rpc CreateDistanceInfo (CreateDistanceInfoRequest) returns (CreateDistanceInfoReply);
}

message CreateDistanceInfoRequest {

  int64 userId = 1;
  double latitude  = 2;
  double longitude  = 3;
  string country  = 4;
}

message CreateDistanceInfoReply {
  bool is_success = 1;
}
message GetDistanceInfoListRequest {
  string country = 1;
  int32 pageIndex = 2;
  int32 pageSize = 3;
  string friendIds = 4;
}

message GetDistanceInfoListReply {
  repeated GetDistanceInfoDetail distanceInfoList = 1;
  int64 totalItems = 2;
}

message GetDistanceInfoDetail {
  int64 userId = 1;
  double latitude  = 2;
  double longitude  = 3;
  string country  = 4;
}